--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="eng">
 
 <head>
-    <link rel="stylesheet" href="../assignment-2-portfolio/style.css">
+    <link rel="stylesheet" href="./Assets/style.css">
     <meta charset="UTF-8" />
     <title> Aarons Portfolio</title>
 </head>
@@ -49,7 +49,7 @@
             </ul>
             <ul class="flex container center">
                 <li>
-             <img src="./portriat.jpeg" 
+             <img src="./Assets/portriat.jpeg" 
              style="border: 0;"
              allowfullscreen=""
              loading="lazy">
